--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=${PORT}
-spring.data.mongodb.uri=${MONGODB_URL}
+spring.data.mongodb.uri=${MONGODB_URI}
 spring.mail.host=${EMAIL_HOST}
 spring.mail.port=${EMAIL_PORT}
 spring.mail.username=${EMAIL_USERNAME}
