--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -62,6 +62,22 @@
     		<version>2.0.0.Final</version>
 		</dependency>
 
+		<dependency>
+    		<groupId>nl.martijndwars</groupId>
+    		<artifactId>web-push</artifactId>
+    		<version>5.1.1</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.bouncycastle</groupId>
+    		<artifactId>bcprov-jdk15on</artifactId>
+    		<version>1.70</version>
+		</dependency>
+		<dependency>
+ 			<groupId>javax.annotation</groupId>
+  			<artifactId>javax.annotation-api</artifactId>
+  			<version>1.3.2</version>
+		</dependency>
+
 
 	</dependencies>
 
