feat: SHA postfix in ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,21 +12,21 @@ build-images:
     - docker:dind
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build --file frontend/Dockerfile -t registry.gitlab.com/software-engineering8932241/job-hunting:frontend_image .
-    - docker build --file backend/Dockerfile -t registry.gitlab.com/software-engineering8932241/job-hunting:backend_image .
-    - docker push registry.gitlab.com/software-engineering8932241/job-hunting:frontend_image
-    - docker push registry.gitlab.com/software-engineering8932241/job-hunting:backend_image
+    - docker build --file frontend/Dockerfile -t registry.gitlab.com/software-engineering8932241/job-hunting:frontend_image_$CI_COMMIT_SHORT_SHA .
+    - docker build --file backend/Dockerfile -t registry.gitlab.com/software-engineering8932241/job-hunting:backend_image_$CI_COMMIT_SHORT_SHA .
+    - docker push registry.gitlab.com/software-engineering8932241/job-hunting:frontend_image_$CI_COMMIT_SHORT_SHA
+    - docker push registry.gitlab.com/software-engineering8932241/job-hunting:backend_image_$CI_COMMIT_SHORT_SHA
 
 frontend:
   stage: frontend
-  image: registry.gitlab.com/software-engineering8932241/job-hunting:frontend_image
+  image: registry.gitlab.com/software-engineering8932241/job-hunting:frontend_image_$CI_COMMIT_SHORT_SHA
   script:
     - echo "Frontend Image"
 
 
 backend:
   stage: backend
-  image: registry.gitlab.com/software-engineering8932241/job-hunting:backend_image
+  image: registry.gitlab.com/software-engineering8932241/job-hunting:backend_image_$CI_COMMIT_SHORT_SHA
   script:
     - echo "Backend Image"
 
