--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,14 @@ backend:
 
 
 deploy-prod:
+  image: ubuntu:latest
   stage: deploy
   script:
-    - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
+    - ssh group4@35.221.223.176 -p group4
+    - export IMAGE=registry.gitlab.com/software-engineering8932241/job-hunting:frontend_image_$CI_COMMIT_SHORT_SHA
+    - docker pull $IMAGE
+    - docker run -d -t frontend $IMAGE
+    - export IMAGE=registry.gitlab.com/software-engineering8932241/job-hunting:backend_image_$CI_COMMIT_SHORT_SHA
+    - docker pull $IMAGE
+    - docker run -d -t backend $IMAGE
   environment: production
