--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,9 @@ backend:
 deploy-prod:
   image: ubuntu:latest
   stage: deploy
+  before_script:
+    - apt-get -yq update
+    - apt-get -yqq install ssh
   script:
     - ssh group4@35.221.223.176 -p group4
     - export IMAGE=registry.gitlab.com/software-engineering8932241/job-hunting:frontend_image_$CI_COMMIT_SHORT_SHA
