--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,12 +37,14 @@ deploy-prod:
   before_script:
     - apt-get -yq update
     - apt-get -yqq install ssh
+    - install -m 600 -D /dev/null ~/.ssh/id_rsa
+    - echo "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/id_rsa
+    - ssh-keyscan -H 35.221.223.176 > ~/.ssh/known_hosts
   script:
-    - ssh group4@35.221.223.176 -p group4
+    - ssh group4@35.221.223.176
     - export IMAGE=registry.gitlab.com/software-engineering8932241/job-hunting:frontend_image_$CI_COMMIT_SHORT_SHA
     - docker pull $IMAGE
     - docker run -d -t frontend $IMAGE
     - export IMAGE=registry.gitlab.com/software-engineering8932241/job-hunting:backend_image_$CI_COMMIT_SHORT_SHA
     - docker pull $IMAGE
     - docker run -d -t backend $IMAGE
-  environment: production
