--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,12 @@ deploy-prod:
   before_script:
     - apt-get -yq update
     - apt-get -yqq install ssh
+    - chmod 400 "$SSH_PRIVATE_KEY"
+    - ssh-add "$SSH_PRIVATE_KEY"
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
     - install -m 600 -D /dev/null ~/.ssh/id_rsa
+    - echo "$SSH_PRIVATE_KEY"
     - echo "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/id_rsa
     - ssh-keyscan -H 35.221.223.176 > ~/.ssh/known_hosts
   script:
@@ -48,3 +53,6 @@ deploy-prod:
     - export IMAGE=registry.gitlab.com/software-engineering8932241/job-hunting:backend_image_$CI_COMMIT_SHORT_SHA
     - docker pull $IMAGE
     - docker run -d -t backend $IMAGE
+    - exit
+  after_script:
+    - rm -rf ~/.ssh
