--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,13 +42,6 @@ deploy-prod:
     - echo "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/id_rsa
     - ssh-keyscan -H 35.221.223.176 > ~/.ssh/known_hosts
   script:
-    - ssh group4@35.221.223.176
-    - export IMAGE=registry.gitlab.com/software-engineering8932241/job-hunting:frontend_image_$CI_COMMIT_SHORT_SHA
-    - docker pull $IMAGE
-    - docker run -d -t frontend $IMAGE
-    - export IMAGE=registry.gitlab.com/software-engineering8932241/job-hunting:backend_image_$CI_COMMIT_SHORT_SHA
-    - docker pull $IMAGE
-    - docker run -d -t backend $IMAGE
-    - exit
+    - ssh group4@35.221.223.176  && export IMAGE=registry.gitlab.com/software-engineering8932241/job-hunting:frontend_image_$CI_COMMIT_SHORT_SHA && docker pull $IMAGE && docker run -d -t frontend $IMAGE && export IMAGE=registry.gitlab.com/software-engineering8932241/job-hunting:backend_image_$CI_COMMIT_SHORT_SHA && docker pull $IMAGE && docker run -d -t backend $IMAGE && exit
   after_script:
     - rm -rf ~/.ssh
