--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,8 @@ backend:
 
 
 deploy-prod:
+  variables:
+    CONTAINER_REGISTRY: registry.gitlab.com/software-engineering8932241/job-hunting
   image: ubuntu:latest
   stage: deploy
   before_script:
@@ -42,6 +44,6 @@ deploy-prod:
     - echo "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/id_rsa
     - ssh-keyscan -H 35.221.223.176 > ~/.ssh/known_hosts
   script:
-    - ssh group4@35.221.223.176 "docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY && docker pull registry.gitlab.com/software-engineering8932241/job-hunting:frontend_image_$CI_COMMIT_SHORT_SHA && docker run -d -t frontend_$CI_COMMIT_SHORT_SHA registry.gitlab.com/software-engineering8932241/job-hunting:frontend_image_$CI_COMMIT_SHORT_SHA && docker pull registry.gitlab.com/software-engineering8932241/job-hunting:backend_image_$CI_COMMIT_SHORT_SHA && docker run -d -t backend_$CI_COMMIT_SHORT_SHA registry.gitlab.com/software-engineering8932241/job-hunting:backend_image_$CI_COMMIT_SHORT_SHA && exit"
+    - ssh group4@35.221.223.176 "docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY && docker pull $CONTAINER_REGISTRY:frontend_image_$CI_COMMIT_SHORT_SHA && docker run -d -t frontend_$CI_COMMIT_SHORT_SHA $CONTAINER_REGISTRY:frontend_image_$CI_COMMIT_SHORT_SHA && docker pull $CONTAINER_REGISTRY:backend_image_$CI_COMMIT_SHORT_SHA && docker run -d -t backend_$CI_COMMIT_SHORT_SHA $CONTAINER_REGISTRY:backend_image_$CI_COMMIT_SHORT_SHA && exit"
   after_script:
     - rm -rf ~/.ssh
