--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM openjdk:21-jdk
 
 WORKDIR /app
 
-COPY . ./
+COPY ./backend ./
 RUN curl https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz -o apache-maven-3.9.6-bin.tar.gz && tar -xvf apache-maven-3.9.6-bin.tar.gz && mv apache-maven-3.9.6 /opt/
 
 EXPOSE 8005
