--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,6 +44,6 @@ deploy-prod:
     - echo "$SSH_PRIVATE_KEY" | base64 -d > ~/.ssh/id_rsa
     - ssh-keyscan -H 35.221.223.176 > ~/.ssh/known_hosts
   script:
-    - ssh group4@35.221.223.176 "docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY && docker pull $CONTAINER_REGISTRY:frontend_image_$CI_COMMIT_SHORT_SHA && docker run -d -t --name frontend_$CI_COMMIT_SHORT_SHA $CONTAINER_REGISTRY:frontend_image_$CI_COMMIT_SHORT_SHA && docker pull $CONTAINER_REGISTRY:backend_image_$CI_COMMIT_SHORT_SHA && docker run -d -t --name backend_$CI_COMMIT_SHORT_SHA $CONTAINER_REGISTRY:backend_image_$CI_COMMIT_SHORT_SHA && docker exec -d backend_$CI_COMMIT_SHORT_SHA mvn spring-boot:run && docker exec -d frontend_$CI_COMMIT_SHORT_SHA yarn dev --host && exit"
+    - ssh group4@35.221.223.176 "docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY && docker pull $CONTAINER_REGISTRY:frontend_image_$CI_COMMIT_SHORT_SHA && docker run -d -t --name frontend_$CI_COMMIT_SHORT_SHA -p 5173:5173 $CONTAINER_REGISTRY:frontend_image_$CI_COMMIT_SHORT_SHA && docker pull $CONTAINER_REGISTRY:backend_image_$CI_COMMIT_SHORT_SHA && docker run -d -t --name backend_$CI_COMMIT_SHORT_SHA $CONTAINER_REGISTRY:backend_image_$CI_COMMIT_SHORT_SHA && docker exec -d backend_$CI_COMMIT_SHORT_SHA mvn spring-boot:run && docker exec -d frontend_$CI_COMMIT_SHORT_SHA yarn dev --host && exit"
   after_script:
     - rm -rf ~/.ssh
