--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,31 +7,45 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "npx jest",
+    "test:watch": "npx jest --watch"
   },
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@testing-library/react": "^14.1.2",
     "axios": "^1.6.2",
+    "jest-babel": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.5",
+    "@babel/preset-env": "^7.23.5",
+    "@babel/preset-react": "^7.23.3",
+    "@testing-library/jest-dom": "^6.1.5",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
+    "axios-mock-adapter": "^1.22.0",
+    "babel-jest": "^29.7.0",
     "dotenv": "^16.3.1",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
     "react-router-dom": "^6.20.0",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.3.5",
     "vite": "^5.0.0"
   }
