--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
+    "cypress": "^13.6.1",
     "dotenv": "^16.3.1",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
